--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body bgcolor="teal">
         <table>
             <tr>
-                <td><img src="PCX_20230203_130046_null4 - Edited-modified.png" alt="Praneet's Profile Picture" width="220" border></td>
+                <td><img src="assets/images/ProfilePicture.png" alt="Praneet's Profile Picture" width="220" border></td>
                 <td><u><h1>Praneet Kaur</h1></u>
                     <p></p><br><strong>A computer science student as well as a future software engineer</strong><em> 12th Passout(2023)</em></p></td>
             </tr>
@@ -103,6 +103,6 @@
             </tr>
         </table>  
         <hr size="3" noshade>
-        <a href="C:\Users\LENOVO\OneDrive\Desktop\Programming\Web Development\HTML - Personal site\contact-me.html"><em>Contact me</em></a>
+        <a href="./contact-me.html"><em>Contact me</em></a>
     </body>
 </html>
