--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <td>
                     <table>
                         <tr>
-                            <td>Logic Builing</td>
+                            <td>Logic Building</td>
                             <td>⭐⭐⭐⭐⭐</td>
                         </tr>
                         <tr>
